--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "tiler_core"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2018"
+repository = "https://github.com/tehnarenok/tiler_core"
+description = "Core library for tiler game"
+license = "MIT"
+license-file = "LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
