--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tiler_core"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2018"
 repository = "https://github.com/tehnarenok/tiler_core"
 description = "Core library for tiler game"
@@ -13,7 +13,6 @@ best_macros = "0.1.3"
 rand = "0.8.4"
 rand_chacha = "0.3.1"
 serde = { version = "1.0", features = ["derive"] }
-wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
 
 [features]
-wasm = []
+serde = []
