--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tiler_core"
-version = "0.1.5"
+version = "0.1.6"
 edition = "2018"
 repository = "https://github.com/tehnarenok/tiler_core"
 description = "Core library for tiler game"
@@ -13,6 +13,11 @@ best_macros = "0.1.3"
 rand = "0.8.4"
 rand_chacha = "0.3.1"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.81"
+sha2 = { version = "0.10", default-features = false }
+base64ct = { version = "1.5.0", features = ["alloc"] }
 
 [features]
 serde = []
+hash = ["serde"]
+default = ["hash"]
